--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .container {
-  width: 50%;
+  width: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -161,5 +161,7 @@ footer {
 }
 
 @media only screen and (max-width: 600px) {
-  
+  .clear {
+    width: 70%;
+  }
 }
